--- a/frontend/index.css
+++ b/frontend/index.css
@@ -3,6 +3,7 @@ body {
   background-repeat: no-repeat;
   background-size: 50%;
   background-position: 90% -0.4%;
+  margin: 0%;
 }
 
 .navigat {
@@ -10,15 +11,22 @@ body {
   display: grid;
   width: 100%;
   grid-template-columns: 50% 50%;
+  position: fixed;
+  top: 0%;
+  overflow: hidden;
+  background-color: rgb(156, 124, 230);
+  align-items:center;
+  padding: 0%;
+  max-height: 10vh;
 }
 
 .logo img {
   width: 20%;
-  height: 70%
+  height: 40%
 }
 
 .parent1 {
-  margin-top: 5%;
+  
   display: grid;
 
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -27,7 +35,7 @@ body {
 .parent1 a {
   text-decoration: none;
   color: black;
-  padding: 8px;
+  /* padding: 8px; */
   border-radius: 8px;
 }
 
@@ -43,7 +51,7 @@ a:hover {
   grid-template-rows: 1fr 3fr 3fr;
   padding: 50px;
   margin-top: 8%;
-
+min-height: 100vh;
 
 }
 
@@ -74,15 +82,21 @@ a:hover {
   text-align: center;
   
 }
+.div3 a:hover{color:black}
 .div3{
   text-align: center;
 }
 
-.div3 a::after {
-  color: orangered
-}
-.link5 a {text-decoration: none;
+.SIGNIN a {text-decoration: none;
 padding: 6px;
 border-radius: 20px;
 background-color: blueviolet;
 color:white}
+.sports {background-color:pink;
+  min-height: 100vh;
+}
+
+.main {min-height: 92vh;}
+
+.teams {background-color: red;
+min-height: 90vh;}
